k8s/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: genyxo-backend-svc
  namespace: genyxo
  labels:
    app.kubernetes.io/name: genyxo-backend
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: genyxo-backend
---
apiVersion: v1
kind: Service
metadata:
  name: genyxo-frontend-svc
  namespace: genyxo
  labels:
    app.kubernetes.io/name: genyxo-frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app.kubernetes.io/name: genyxo-frontend
